Update to new Artemis4J version